differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr66820.c-4.8.2-1.out.txt
pr66820.c: In function ‘foo’:
pr66820.c:11:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < 16; i++)
   ^
pr66820.c:11:3: note: use option -std=c99 or -std=gnu99 to compile your code
